combining pages into one index page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <a href="contact-page.html" class="nav-text">contact</a>
         </div>
     </div>
-    <div id="center-content">
-        <div id="index-content">
+
+    <div class="center-content">
+        <div class="index-content">
             <div class="info-content" id="dev">
                 <p class="info-facts">Developer</p>
             </div>
@@ -34,6 +35,59 @@
             </div>
         </div>
     </div>
+
+    <div class="center-content">
+        <div class="index-content">
+            <h1 id="hello">Hello, I'm Tuesday Shaw</h1>
+            <br>
+            <img id="tuesday-img" src="img/tuesday.JPG" alt="">
+            <br>
+            <p id="about-text">
+                Developer with CSS, JavaScript, Java, PHP and WordPress experience.
+                <br/>
+                <br/>
+                As an artist, I have an eye for design and i'm drawn to full-stack development.
+                <br/>
+                <br/>
+                Contact me to discuss creating something for you!</p>
+        </div>
+    </div>
+
+    <div class="center-content">
+        <div class="index-content">
+            <div id="work-content">
+                <div id="work-top-row">
+                    <div class="projects">
+                        <a class="code-links" href="https://github.com/tuesdayshaw/spring-blog" target="_blank">WoofBook</a>
+                        <p>Blog site for animal lovers</p>
+                        <img class="project-img" src="img/woofbook.png" alt="">
+                    </div>
+                    <div class="projects">
+                        <a class="code-links" href="https://github.com/tuesdayshaw/mammoth-adlister/tree/passwords_exercises" target="_blank">ListSpot</a>
+                        <p>Classifieds site for community listings</p>
+                        <img class="project-img" src="img/listspot.png" alt="">
+                    </div>
+                    <div class="projects">
+                        <a class="code-links" href="https://get-it.press" target="_blank">Get It!</a>
+                        <p>Grocery Lists application built by a team of three with user preferences, barcode scanning and sharing features</p>
+                        <img class="project-img" src="img/getit.png" alt="">
+                    </div>
+                </div>
+                <div id="work-bottom-row">
+                    <!--Instagram, Facebook, Twitter? API-->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="center-content">
+        <div class="index-content">
+            <div id="contact">
+                <div id="form_sample"></div>
+            </div>
+        </div>
+    </div>
+    
     <div id="bottom-nav">
         <span id="copyright">Copyright© 2017 Tuesday Shaw</span>
         <a href="https://www.linkedin.com/in/tuesday-shaw/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
