updated about me section
added email form

--- a/index.html
+++ b/index.html
@@ -16,44 +16,52 @@
             <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         </div>
         <div id="nav-links">
-            <a href="about-page.html" class="nav-text">about</a>
+            <a href="#about-text" class="nav-text">about</a>
             <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-            <a href="work-page.html" class="nav-text">work</a>
+            <a href="#work-content" class="nav-text">work</a>
             <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-            <a href="contact-page.html" class="nav-text">contact</a>
+            <a href="#contact" class="nav-text">contact</a>
         </div>
     </div>
 
-    <div class="center-content">
+    <div class="center-content1">
         <div class="index-content">
-            <div class="info-content" id="dev">
-                <p class="info-facts">Developer</p>
-            </div>
-            <img id="index-art2" src="img/art-selfie.png" alt="Self-portrait of the artist.">
-            <div class="info-content">
-                <p class="info-facts" id="art">Artist</p>
+            <div class="splash-info">
+                <div class="info-content" id="dev">
+                    <p class="info-facts">Developer</p>
+                </div>
+                <img id="index-art2" src="img/art-selfie.png" alt="Self-portrait of the artist.">
+                <div class="info-content">
+                    <p class="info-facts" id="art">Artist</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="center-content">
+    <div class="center-content2">
         <div class="index-content">
-            <h1 id="hello">Hello, I'm Tuesday Shaw</h1>
-            <br>
-            <img id="tuesday-img" src="img/tuesday.JPG" alt="">
-            <br>
-            <p id="about-text">
-                Developer with CSS, JavaScript, Java, PHP and WordPress experience.
-                <br/>
-                <br/>
-                As an artist, I have an eye for design and i'm drawn to full-stack development.
-                <br/>
-                <br/>
-                Contact me to discuss creating something for you!</p>
+            <div class="about-content">
+                <h1 id="hello">About Me</h1>
+                <br>
+                <img id="tuesday-img" src="img/tuesday.JPG" alt="">
+                <br>
+                <p id="about-text">
+                    I'm an Artist and a Full-Stack Developer. Creative Thinker. Problem Solver. Empathetic Listener. Discussion Starter. Trustworthy Confidant.
+                    <br/>
+                    <br/>
+                    I’ve gained valuable work experience through my travels and career choices. Driven to learn, adapt and work harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions and interests into the real world and gained tangible experience in exchange.
+                    <br/>
+                    <br/>
+                    I have been painting and drawing since I was young and I'm currently expanding my talents into Digital Illustration. I'm also a 300-hour Certified Yoga Instructor with a passion for health and balance in life.
+                    <br/>
+                    <br/>
+                    Contact me to discuss creating something for you!
+                </p>
+            </div>
         </div>
     </div>
 
-    <div class="center-content">
+    <div class="center-content3">
         <div class="index-content">
             <div id="work-content">
                 <div id="work-top-row">
@@ -80,7 +88,7 @@
         </div>
     </div>
 
-    <div class="center-content">
+    <div class="center-content4">
         <div class="index-content">
             <div id="contact">
                 <div id="form_sample"></div>
@@ -98,6 +106,7 @@
 </div>
 <script src="js/jquery-3.2.0.js"></script>
 <script src="js/index.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
 
