added art to work section
reformatted css of work section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
     <link rel="SHORTCUT ICON" href="img/favicon.ico" />
-    <!--<link rel="stylesheet" type="text/css" href="css/index-phone.css">-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
@@ -16,7 +15,7 @@
             <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         </div>
         <div id="nav-links">
-            <a href="#about-text" class="nav-text">about</a>
+            <a href="#hello" class="nav-text">about</a>
             <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
             <a href="#work-content" class="nav-text">work</a>
             <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
@@ -65,24 +64,39 @@
         <div class="index-content">
             <div id="work-content">
                 <div id="work-top-row">
+                    <h1 class="work-titles">DEVELOPMENT</h1>
+                    <hr>
                     <div class="projects">
                         <a class="code-links" href="https://github.com/tuesdayshaw/spring-blog" target="_blank">WoofBook</a>
-                        <p>Blog site for animal lovers</p>
+                        <p>Spring Boot MVC school project blogging site for with an animal lovers theme</p>
                         <img class="project-img" src="img/woofbook.png" alt="">
                     </div>
                     <div class="projects">
                         <a class="code-links" href="https://github.com/tuesdayshaw/mammoth-adlister/tree/passwords_exercises" target="_blank">ListSpot</a>
-                        <p>Classifieds site for community listings</p>
+                        <p>Java MVC school project classifieds site with a community cork board theme</p>
                         <img class="project-img" src="img/listspot.png" alt="">
                     </div>
                     <div class="projects">
                         <a class="code-links" href="https://get-it.press" target="_blank">Get It!</a>
-                        <p>Grocery Lists application built by a team of three with user preferences, barcode scanning and sharing features</p>
+                        <p>Spring Boot MVC capstone project that is a grocery list app built by a team of three with user preferences, barcode scanning and sharing features</p>
                         <img class="project-img" src="img/getit.png" alt="">
                     </div>
                 </div>
                 <div id="work-bottom-row">
-                    <!--Instagram, Facebook, Twitter? API-->
+                    <h1 class="work-titles">ART</h1>
+                    <hr>
+                    <div class="art">
+                        <img class="art-img" src="img/spring-splatter.jpg" alt="">
+                        <img class="art-img" src="img/bee-ss.png" alt="">
+                    </div>
+                    <div class="art">
+                        <img class="art-img" src="img/red-ss.png" alt="">
+                        <img class="art-img" src="img/neonsplatter.jpg" alt="">
+                    </div>
+                    <div class="art">
+                        <img class="art-img" src="img/line-pear.png" alt="">
+                        <img class="art-img" src="img/dex-ss.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
