--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <a href="https://www.facebook.com/canidmarsart/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
         <a href="https://www.instagram.com/canidmarsart/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
         <a href="https://www.twitter.com/tuesday_shaw/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
+        <a href="https://github.com/tuesdayshaw" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Github</button></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
