small text correction in work section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <hr>
                     <div class="projects">
                         <a class="code-links" href="https://github.com/tuesdayshaw/spring-blog" target="_blank">WoofBook</a>
-                        <p>Spring Boot MVC school project blogging site for with an animal lovers theme</p>
+                        <p>Spring Boot MVC school project blogging site with a dog lovers theme</p>
                         <img class="project-img" src="img/woofbook.png" alt="">
                     </div>
                     <div class="projects">
