text updates in about section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     I have been painting and drawing since I was young and I'm currently expanding my talents into Digital Illustration. I'm also a 300-hour Certified Yoga Instructor with a passion for health and balance in life.
                     <br/>
                     <br/>
-                    Contact me to discuss creating something for you!
+                    Available for freelance web and WordPress development. Contact me to discuss creating something for you!
                 </p>
             </div>
         </div>
