--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                     I’ve gained valuable work experience through my travels and career choices. Driven to learn, adapt and work harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions and interests into the real world and gained tangible experience in exchange.
                     <br/>
                     <br/>
-                    I have been painting and drawing since I was young and I'm currently expanding my talents into Digital Illustration. I'm also a 300-hour Certified Yoga Instructor with a passion for health and balance in life. In my free time, I enjoy spending time with my family of dogs and cats and husband.
+                    I have been painting and drawing since I was young and I'm currently expanding my talents into Digital Illustration. I'm also a 300-hour Certified Yoga Instructor with a passion for health and balance in life. In my free time, I enjoy spending time with my family of dogs, cats and husband.
                     <br/>
                     <br/>
-                    Available for freelance web and WordPress development. Contact me to discuss creating something for you!
+                    Available for freelance web and WordPress development.
+                    <br/>
+                    Contact me to discuss creating something for you!
                 </p>
             </div>
         </div>
