added more about text

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     I’ve gained valuable work experience through my travels and career choices. Driven to learn, adapt and work harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions and interests into the real world and gained tangible experience in exchange.
                     <br/>
                     <br/>
+                    In the last few years I have realized my passion for coding and development through a drive to want to build the websites for my previous places of employment. I quickly enrolled in Codeup, a full-stack development bootcamp based in San Antonio, Tx and fell in love with coding. As I continue to learn and journey into the tech field I find I am drawn to the idea of going back to college for a a dual Computer Science and Graphic Design major. I am especially interested in the connection of Art and Technology. 
+                    <br/>
+                    <br/>
                     I have been painting and drawing since I was young and I'm currently expanding my talents into Digital Illustration. I'm also a 300-hour Certified Yoga Instructor with a passion for health and balance in life. In my free time, I enjoy spending time with my family of dogs, cats and husband.
                     <br/>
                     <br/>
